--- a/frontend/src/pages/placeOrder/PlaceOrder.css
+++ b/frontend/src/pages/placeOrder/PlaceOrder.css
@@ -33,3 +33,9 @@
 .place-order .cart-total button{
    margin-top: 30px;
 }
+@media (max-width:750px) {
+   .place-order{
+      display: flex;
+      flex-direction: column;
+   }
+}
