--- a/admin/src/components/sidebar/Sidebar.css
+++ b/admin/src/components/sidebar/Sidebar.css
@@ -21,6 +21,9 @@
    padding: 8px 10px;
    border-radius: 3px 0px 0px 3px;
    cursor: pointer;
+}.sidebar-option.active{
+   background-color: #fff0ed;
+   border-color: tomato;
 }
 @media (max-width:900px) {
    .sidebar-option p{
